--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
     "react": "15.4.2",
     "react-native": "0.41.2",
     "react-native-app-intro": "^1.1.5",
-    "react-native-material-design-searchbar": "^1.1.0",
-    "react-native-search-bar": "^3.0.0",
+    "react-native-router-flux": "^3.37.0",
+    "react-native-searchbar": "^1.7.0",
+    "react-native-tab-navigator": "^0.3.3",
     "react-native-tabbar-navigator": "^0.4.3",
-    "react-native-vector-icons": "^4.0.0"
+    "react-redux": "^5.0.2",
+    "redux": "^3.6.0",
+    "redux-actions": "^1.2.1",
+    "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
     "babel-jest": "18.0.0",
@@ -23,5 +27,10 @@
   },
   "jest": {
     "preset": "react-native"
+  },
+  "rnpm": {
+    "assets": [
+      "app/assets/fonts"
+    ]
   }
 }
