--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "15.4.2",
     "react-native": "0.41.2",
     "react-native-app-intro": "^1.1.5",
+    "react-native-maps": ">=0.12.4",
     "react-native-radio-buttons": "^0.14.0",
     "react-native-router-flux": "^3.37.0",
     "react-native-tab-navigator": "^0.3.3",
