--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-native-maps": ">=0.12.4",
     "react-native-radio-buttons": "^0.14.0",
     "react-native-router-flux": "^3.37.0",
+    "react-native-snap-carousel": "^2.0.1",
     "react-native-tab-navigator": "^0.3.3",
     "react-native-vector-icons": "^4.0.0",
     "react-redux": "^5.0.2",
