--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "test": "jest"
   },
   "dependencies": {
+    "moment": "^2.17.1",
     "react": "15.4.2",
     "react-native": "0.41.2",
     "react-native-app-intro": "^1.1.5",
-    "react-native-calendar-strip": "^0.1.3",
     "react-native-maps": ">=0.12.4",
     "react-native-radio-buttons": "^0.14.0",
     "react-native-router-flux": "^3.37.0",
