--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "assign-deep": "^0.4.5",
     "moment": "^2.17.1",
     "react": "15.4.2",
     "react-native": "0.41.2",
@@ -14,6 +15,7 @@
     "react-native-radio-buttons": "^0.14.0",
     "react-native-router-flux": "^3.37.0",
     "react-native-snap-carousel": "^2.0.1",
+    "react-native-swiper": "^1.5.4",
     "react-native-tab-navigator": "^0.3.3",
     "react-native-vector-icons": "^4.0.0",
     "react-redux": "^5.0.2",
