--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-native-radio-buttons": "^0.14.0",
     "react-native-router-flux": "^3.37.0",
     "react-native-snap-carousel": "^2.0.1",
+    "react-native-swipe-gestures": "^1.0.2",
     "react-native-swiper": "^1.5.4",
     "react-native-tab-navigator": "^0.3.3",
     "react-native-vector-icons": "^4.0.0",
