--- a/package.json
+++ b/package.json
@@ -7,15 +7,16 @@
     "test": "jest"
   },
   "dependencies": {
-    "assign-deep": "^0.4.5",
     "moment": "^2.17.1",
     "react": "15.4.2",
     "react-native": "0.41.2",
+    "react-native-app-intro": "^1.1.5",
+    "react-native-deep-linking": "^1.0.1",
     "react-native-maps": ">=0.12.4",
     "react-native-radio-buttons": "^0.14.0",
     "react-native-router-flux": "^3.37.0",
     "react-native-snap-carousel": "^2.0.1",
-    "react-native-swiper": "^1.5.4",
+    "react-native-swipe-gestures": "^1.0.2",
     "react-native-tab-navigator": "^0.3.3",
     "react-native-vector-icons": "^4.0.0",
     "react-redux": "^5.0.2",
