--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "react-native": "0.42.0",
     "react-native-app-intro": "^1.1.5",
     "react-native-deep-linking": "^1.0.2",
+    "react-native-image-picker": "^0.26.0",
     "react-native-maps": ">=0.12.4",
+    "react-native-modal-dropdown": "^0.4.1",
     "react-native-radio-buttons": "^0.14.0",
     "react-native-router-flux": "^3.37.0",
+    "react-native-simple-radio-button": "^2.5.0-alpha.1",
     "react-native-snap-carousel": "^2.0.1",
     "react-native-swipe-gestures": "^1.0.2",
     "react-native-tab-navigator": "^0.3.3",
