--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "class-autobind": "^0.1.4",
     "moment": "^2.17.1",
     "react": "15.4.2",
     "react-native": "0.42.0",
@@ -19,6 +20,7 @@
     "react-native-router-flux": "^3.37.0",
     "react-native-simple-radio-button": "^2.5.0-alpha.1",
     "react-native-snap-carousel": "^2.0.1",
+    "react-native-stars-rating": "^0.1.6",
     "react-native-swipe-gestures": "^1.0.2",
     "react-native-tab-navigator": "^0.3.3",
     "react-native-vector-icons": "^4.0.0",
