--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "15.4.2",
     "react-native": "0.42.0",
     "react-native-app-intro": "^1.1.5",
+    "react-native-datepicker": "^1.4.4",
     "react-native-deep-linking": "^1.0.2",
     "react-native-image-picker": "^0.26.0",
     "react-native-maps": ">=0.12.4",
