CodePush, Crashlytics, Issues. - added the CodePush and Crashlytics libraries. - Fixed a few issues.

--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "react": "15.4.2",
     "react-native": "0.42.0",
     "react-native-app-intro": "^1.1.5",
+    "react-native-code-push": "^1.17.2-beta",
     "react-native-datepicker": "^1.4.4",
     "react-native-deep-linking": "^1.0.2",
+    "react-native-fabric": "^0.4.1",
     "react-native-image-picker": "^0.26.0",
     "react-native-maps": ">=0.12.4",
     "react-native-modal-dropdown": "^0.4.1",
@@ -25,7 +27,7 @@
     "react-native-swipe-gestures": "^1.0.2",
     "react-native-tab-navigator": "^0.3.3",
     "react-native-vector-icons": "^4.0.0",
-    "react-redux": "^5.0.2",
+    "react-redux": "^5.0.3",
     "redux": "^3.6.0",
     "redux-actions": "^1.2.1",
     "redux-thunk": "^2.2.0"
