--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-native-fabric": "^0.4.1",
     "react-native-image-picker": "^0.26.0",
     "react-native-maps": ">=0.12.4",
+    "react-native-md-textinput": "^2.0.4",
     "react-native-modal-dropdown": "^0.4.1",
     "react-native-radio-buttons": "^0.14.0",
     "react-native-router-flux": "^3.37.0",
