--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "base-64": "^0.1.0",
     "class-autobind": "^0.1.4",
     "moment": "^2.17.1",
     "react": "15.4.2",
@@ -16,8 +17,9 @@
     "react-native-datepicker": "^1.4.4",
     "react-native-deep-linking": "^1.0.2",
     "react-native-fabric": "^0.4.1",
+    "react-native-fetch-blob": "^0.10.2",
     "react-native-image-picker": "^0.26.0",
-    "react-native-maps": ">=0.12.4",
+    "react-native-maps": "^0.13.0",
     "react-native-md-textinput": "^2.0.4",
     "react-native-modal-dropdown": "^0.4.1",
     "react-native-radio-buttons": "^0.14.0",
