--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-native-stars-rating": "^0.1.6",
     "react-native-swipe-gestures": "^1.0.2",
     "react-native-tab-navigator": "^0.3.3",
+    "react-native-timer": "^1.3.1",
     "react-native-vector-icons": "^4.0.0",
     "react-redux": "^5.0.3",
     "redux": "^3.6.0",
