--- a/ios/Milkcrate/Info.plist
+++ b/ios/Milkcrate/Info.plist
@@ -50,6 +50,8 @@
 				<true/>
 			</dict>
 		</dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
 	</dict>
 	<key>NSCameraUsageDescription</key>
 	<string></string>
