--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -127,9 +127,9 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-mail')
     compile project(':react-native-fetch-blob')
     compile project(':react-native-maps')
-    compile project(':react-native-fabric')
     compile project(':react-native-code-push')
     compile project(':react-native-image-picker')
     compile project(':react-native-vector-icons')
