--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
     "react-native-app-intro": "^1.1.5",
     "react-native-code-push": "^1.17.2-beta",
     "react-native-datepicker": "^1.4.4",
-    "react-native-deep-linking": "^1.0.2",
+    "react-native-deep-linking": "^2.0.1",
     "react-native-fabric": "^0.4.1",
     "react-native-fetch-blob": "^0.10.2",
     "react-native-image-picker": "^0.26.0",
+    "react-native-mail": "^3.0.1",
     "react-native-maps": "^0.13.0",
     "react-native-md-textinput": "^2.0.4",
     "react-native-modal-dropdown": "^0.4.1",
