--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "15.4.2",
     "react-native": "0.42.0",
     "react-native-app-intro": "^1.1.5",
+    "react-native-calendar-events": "^1.3.6",
     "react-native-code-push": "^1.17.2-beta",
     "react-native-datepicker": "^1.4.4",
     "react-native-deep-linking": "^2.0.1",
