--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "react-redux": "^5.0.3",
     "redux": "^3.6.0",
     "redux-actions": "^1.2.1",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "underscore": "^1.8.3"
   },
   "devDependencies": {
     "babel-jest": "18.0.0",
