--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -156,6 +156,7 @@ repositories {
 }
 
 dependencies {
+    compile project(':react-native-video')
     compile project(':react-native-permissions')
     compile project(':react-native-fabric')
     compile project(':react-native-calendar-events')
