4/11 work - save install information
Added/Changes files
   MainApplication.java
   build.gradle
   settings.gradle
   bendService.js
   app.js
   project.pbxproj
   package.json

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -156,6 +156,7 @@ repositories {
 }
 
 dependencies {
+    compile project(':react-native-device-info')
     compile project(':react-native-video')
     compile project(':react-native-permissions')
     compile project(':react-native-fabric')
