--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-native-code-push": "^1.17.2-beta",
     "react-native-datepicker": "^1.4.4",
     "react-native-deep-linking": "^2.0.1",
+    "react-native-device-info": "^0.10.2",
     "react-native-fabric": "^0.4.1",
     "react-native-fetch-blob": "^0.10.2",
     "react-native-image-picker": "^0.26.0",
