--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native-image-picker": "^0.26.0",
     "react-native-mail": "^3.0.1",
     "react-native-maps": "^0.13.0",
+    "react-native-mauron85-background-geolocation": "^0.2.0-alpha.7",
     "react-native-md-textinput": "^2.0.4",
     "react-native-modal-dropdown": "^0.4.1",
     "react-native-permissions": "^0.2.7",
