--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-native-simple-radio-button": "^2.5.0-alpha.1",
     "react-native-snap-carousel": "^2.0.1",
     "react-native-stars-rating": "^0.1.6",
+    "react-native-svg": "^5.1.7",
     "react-native-swipe-gestures": "^1.0.2",
     "react-native-tab-navigator": "^0.3.3",
     "react-native-timer": "^1.3.1",
