--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native-fetch-blob": "^0.10.2",
     "react-native-image-picker": "^0.26.0",
     "react-native-keyboard-aware-scroll-view": "^0.2.8",
+    "react-native-loading-spinner-overlay": "^0.4.4",
     "react-native-mail": "^3.0.1",
     "react-native-maps": "^0.13.0",
     "react-native-md-textinput": "^2.0.4",
