--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "react-native-image-picker": "^0.26.0",
     "react-native-keyboard-aware-scroll-view": "^0.2.8",
     "react-native-loading-spinner-overlay": "^0.4.4",
-    "react-native-local-storage": "^1.5.1",
     "react-native-mail": "^3.0.1",
     "react-native-maps": "^0.13.0",
     "react-native-md-textinput": "^2.0.4",
@@ -34,6 +33,7 @@
     "react-native-simple-radio-button": "^2.5.0-alpha.1",
     "react-native-snap-carousel": "^2.0.1",
     "react-native-stars-rating": "^0.1.6",
+    "react-native-storage": "^0.1.5",
     "react-native-swipe-gestures": "^1.0.2",
     "react-native-tab-navigator": "^0.3.3",
     "react-native-timer": "^1.3.1",
