--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -156,8 +156,9 @@ repositories {
 }
 
 dependencies {
-    compile project(':react-native-svg')
     compile project(':react-native-mauron85-background-geolocation')
+    compile project(':react-native-push-notification')
+    compile project(':react-native-svg')
     compile project(':react-native-device-info')
     compile project(':react-native-video')
     compile project(':react-native-permissions')
