--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -99,7 +99,7 @@ android {
         applicationId "com.milkcrate"
         minSdkVersion 16
         targetSdkVersion 23
-        versionCode 4100000
+        versionCode 4100001
         versionName "4.1"
         ndk {
             abiFilters "armeabi-v7a", "x86"
@@ -156,6 +156,7 @@ repositories {
 }
 
 dependencies {
+    compile project(':react-native-orientation')
     compile project(':react-native-mauron85-background-geolocation')
     compile project(':react-native-push-notification')
     compile project(':react-native-svg')
