--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-mauron85-background-geolocation": "^0.2.0-alpha.7",
     "react-native-md-textinput": "^2.0.4",
     "react-native-modal-dropdown": "^0.4.1",
+    "react-native-orientation": "^1.17.0",
     "react-native-permissions": "^0.2.7",
     "react-native-push-notification": "^2.2.1",
     "react-native-radio-buttons": "^0.14.0",
