--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -175,7 +175,8 @@ dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:23.0.1'
     compile 'com.facebook.react:react-native:+'
-    compile 'com.facebook.fresco:animated-gif:1.3.0'
+    compile 'com.facebook.fresco:animated-base-support:0.11.0'
+    compile 'com.facebook.fresco:animated-gif:0.11.0'
     // From node_modules
     compile 'com.google.android.gms:play-services-base:10.2.4'
     compile 'com.google.android.gms:play-services-maps:10.2.4'
